--- a/package.json
+++ b/package.json
@@ -19,14 +19,14 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.14",
     "axios": "^1.8.2",
-    "expo": "~52.0.37",
+    "expo": "52.0.38",
     "expo-blur": "~14.0.3",
-    "expo-constants": "~17.0.7",
+    "expo-constants": "17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linking": "~7.0.5",
     "expo-location": "~18.0.7",
-    "expo-router": "~4.0.17",
+    "expo-router": "4.0.18",
     "expo-speech": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
     "expo-status-bar": "~2.0.1",
@@ -36,7 +36,6 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-ai-navigation-sdk": "^0.4.10",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-maps": "1.18.0",
     "react-native-reanimated": "~3.16.1",
@@ -51,7 +50,7 @@
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "jest": "^29.2.1",
-    "jest-expo": "~52.0.4",
+    "jest-expo": "^52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
