--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "^18.0.8",
+    "expo-navigation-bar": "^4.0.8",
     "expo-router": "^4.0.19",
     "expo-speech": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
@@ -39,9 +40,11 @@
     "react": "18.3.1",
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-android-navbar": "^0.1.2",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.18.0",
+    "react-native-navigation-bar-color": "^2.0.2",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~3.16.1",
     "react-native-safe-area-context": "4.12.0",
