--- a/package.json
+++ b/package.json
@@ -41,12 +41,14 @@
     "react-dom": "18.3.1",
     "react-native": "0.76.7",
     "react-native-android-navbar": "^0.1.2",
+    "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.18.0",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~3.16.1",
+    "react-native-responsive-screen": "^1.4.2",
     "react-native-safe-area-context": "4.12.0",
     "react-native-screens": "~4.4.0",
     "react-native-web": "~0.19.13",
