Cambios 20/03/2025 (Salida del Lab)

--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
     "name": "ShadeMap",
-    "slug": "ShadeMap",
+    "slug": "ShadeNavApp",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
@@ -20,6 +20,10 @@
       "supportsTablet": true,
       "config": {
         "googleMapsApiKey": "AIzaSyBfXiE6MbfNMqsP9wd8aZAj1Jm13ElPgPw"
+      },
+      "infoPlist": {
+        "NSLocationWhenInUseUsageDescription": "Permite a esta app usar tu ubicación para mostrarte tu posición en el mapa.",
+        "NSLocationAlwaysUsageDescription": "Permite a esta app usar tu ubicación en segundo plano para mostrarte tu posición en el mapa."
       }
     },
     "android": {
@@ -31,9 +35,7 @@
       "permissions": [
         "ACCESS_COARSE_LOCATION",
         "ACCESS_FINE_LOCATION",
-        "ACCESS_BACKGROUND_LOCATION",
-        "android.permission.ACCESS_COARSE_LOCATION",
-        "android.permission.ACCESS_FINE_LOCATION"
+        "ACCESS_BACKGROUND_LOCATION"
       ],
       "config": {
         "googleMaps": {
@@ -45,21 +47,16 @@
       "eas": {
         "projectId": "da9ebeea-b20e-4e52-8281-6db6efe7c893"
       }
-    }
-  },
-  "plugins": [
-    [
-      "expo-location",
-      {
-        "locationAlwaysAndWhenInUsePermission": "Permite a esta app usar tu ubicación para mostrarte tu posición en el mapa."
-      }
+    },
+    "plugins": [
+      [
+        "expo-location",
+        {
+          "locationAlwaysAndWhenInUsePermission": "Permite a esta app usar tu ubicación para mostrarte tu posición en el mapa."
+        }
+      ],
+      "expo-router"
     ],
-    "expo-router"
-  ],
-  "extra": {
-    "eas": {
-      "projectId": "da9ebeea-b20e-4e52-8281-6db6efe7c893"
-    }
-  },
-  "owner": "by2"
+    "owner": "by2"
+  }
 }
