--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.2",
+    "@mapbox/polyline": "^1.2.1",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
@@ -45,6 +46,8 @@
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.18.0",
+    "react-native-maps-directions": "^1.9.0",
+    "react-native-maps-routes": "^1.0.4",
     "react-native-navigation-bar-color": "^2.0.2",
     "react-native-onboarding-swiper": "^1.3.0",
     "react-native-reanimated": "~3.16.1",
@@ -57,6 +60,7 @@
   "devDependencies": {
     "@babel/core": "^7.25.2",
     "@types/jest": "^29.5.12",
+    "@types/mapbox__polyline": "^1.0.5",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
     "expo": "^52.0.39",
