--- a/.env
+++ b/.env
@@ -1,1 +1,10 @@
- 
+UV_API_KEY=1eb5ae58653e491cbeb192832251203
+UV_API_URL=https://api.weatherapi.com/v1
+WEATHER_API_URL=https://api.openweathermap.org/data/2.5
+OPENWEATHER_API_KEY=01d1e2a2ab57d9ea74d3d44680b5d8d7
+# .env
+WEATHER_PART1=1eb5ae
+WEATHER_PART2=58653e
+WEATHER_PART3=491cbe
+WEATHER_PART4=b19283
+WEATHER_PART5=2251203
