--- a/package.json
+++ b/package.json
@@ -21,9 +21,11 @@
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native": "^7.0.15",
     "@react-navigation/stack": "^7.1.2",
-    "axios": "^1.8.2",
+    "axios": "^1.8.4",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.7",
     "expo-blur": "~14.0.3",
-    "expo-constants": "17.0.8",
+    "expo-constants": "^17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
@@ -37,6 +39,7 @@
     "expo-symbols": "~0.2.2",
     "expo-system-ui": "~4.0.8",
     "expo-web-browser": "~14.0.2",
+    "express": "^4.21.2",
     "lottie-react-native": "^7.1.0",
     "react": "18.3.1",
     "react-dom": "18.3.1",
@@ -44,6 +47,7 @@
     "react-native-android-navbar": "^0.1.2",
     "react-native-config": "^1.5.5",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-keychain": "^10.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-maps": "1.18.0",
     "react-native-maps-directions": "^1.9.0",
@@ -63,11 +67,24 @@
     "@types/mapbox__polyline": "^1.0.5",
     "@types/react": "~18.3.12",
     "@types/react-test-renderer": "^18.3.0",
+    "concurrently": "^9.1.2",
     "expo": "^52.0.39",
     "jest": "^29.2.1",
     "jest-expo": "^52.0.6",
     "react-test-renderer": "18.3.1",
     "typescript": "^5.3.3"
   },
-  "private": true
+  "private": true,
+  "description": "This is an [Expo](https://expo.dev) project created with [`create-expo-app`](https://www.npmjs.com/package/create-expo-app).",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/by-reales/ShadeNavApp.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC",
+  "bugs": {
+    "url": "https://github.com/by-reales/ShadeNavApp/issues"
+  },
+  "homepage": "https://github.com/by-reales/ShadeNavApp#readme"
 }
