--- a/.env
+++ b/.env
@@ -8,3 +8,8 @@ WEATHER_PART2=58653e
 WEATHER_PART3=491cbe
 WEATHER_PART4=b19283
 WEATHER_PART5=2251203
+
+API_PART1=01d1e2a2
+API_PART2=ab57d9ea
+API_PART3=74d3d446
+API_PART4=80b5d8d7
