--- a/package.json
+++ b/package.json
@@ -25,13 +25,14 @@
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "expo-blur": "~14.0.3",
-    "expo-constants": "^17.0.8",
+    "expo-constants": "~17.0.8",
     "expo-font": "~13.0.4",
     "expo-haptics": "~14.0.1",
     "expo-linear-gradient": "~14.0.2",
     "expo-linking": "~7.0.5",
     "expo-location": "^18.0.8",
     "expo-navigation-bar": "^4.0.8",
+    "expo-network": "^7.1.5",
     "expo-router": "^4.0.19",
     "expo-speech": "~13.0.1",
     "expo-splash-screen": "~0.29.22",
