--- a/Cargo.toml
+++ b/Cargo.toml
@@ -59,6 +59,9 @@ futures-util = "0.3"
 byteorder = "1.5.0"
 memchr = "2.7.6"
 
+# ZIP file creation
+zip = "0.6"
+
 [profile.release]
 lto = true
 codegen-units = 1
